add aelos speed builders npc